Added skills & links to skills page. Edited pers_proj to include video & pictures of projects.

--- a/files/personal_proj.html
+++ b/files/personal_proj.html
@@ -76,41 +76,32 @@
 		<!-- Indicators -->
 		<ol class="carousel-indicators">
 			<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-			<li data-target="#myCarousel" data-slide-to="1"></li>
 			<li data-target="#myCarousel" data-slide-to="2"></li>
 			<li data-target="#myCarousel" data-slide-to="3"></li>
 		</ol>
 		<!-- Carousel Items -->
 		<div class="carousel-inner" role="listbox">
 			<div class="item active">
-				<img class="first-slide" src="../images/engineer.jpg" alt="Engineer-In-Training Cert">
+				<img class="first-slide" src="../images/charlie.jpg" alt="Rocket Launch Day">
 				<div class="container">
 					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="#EIT_Cert" role="button">EIT Certified</a></p>
+						<p><a class="btn btn-lg btn-info" href="#Tripoli" role="button">Amateur Rocketry</a></p>
 					</div>
 				</div>
 			</div>
 			<div class="item">
-				<img class="second-slide" src="../images/thermometer.jpg" alt="Thermometer Drawing">
+				<img class="second-slide" src="../images/tam.jpg" alt="Thermometer Drawing">
 				<div class="container">
 					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="#SolidWorks" role="button">SolidWorks Associate</a></p>
+						<p><a class="btn btn-lg btn-info" href="#TAM" role="button">Volunteering</a></p>
 					</div>
 				</div>
 			</div>
 			<div class="item">
-				<img class="second-slide" src="../images/me_flying.jpg" alt="Flying a Cessna 172">
+				<img class="second-slide" src="../images/cover_page.jpg" alt="Coding for this Page">
 				<div class="container">
 					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="#Pilot" role="button">Private Pilot</a></p>
-					</div>
-				</div>
-			</div>
-			<div class="item">
-				<img class="second-slide" src="../images/coding.jpg" alt="Coding for this Page">
-				<div class="container">
-					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="#Skills" role="button">Other Skills</a></p>
+						<p><a class="btn btn-lg btn-info" href="#website" role="button">This Website</a></p>
 					</div>
 				</div>
 			</div>
@@ -128,57 +119,51 @@
 	
 	<!-- "Featurette" Section -->
 	<div class="container marketing">
-		<hr class="featurette-divider" id="EIT_Cert">
+		<hr class="featurette-divider" id="Tripoli">
 		<div class="row featurette">
 			<div class="col-md-7">
-				<h2 class="featurette-heading">NCEES Engineer-In-Training</h2>
+				<h2 class="featurette-heading">Amateur Rocketry</h2>
 				<p class="lead">More info goes here</p>
 			</div>
 			<div class="col-md-5">
-				<img class="featurette-image img-responsive center-block" src="../images/engineer.jpg"
-				alt="Engineer-In-Training Cert">
+				<div class="embed-responsive embed-responsive-16by9">
+					<video controls allowfullscreen>
+						<source src="../images/Launch.mp4" type="video/mp4" autoplay="0">
+					</video>
+				</div>
 			</div>
 		</div>
 	
-		<hr class="featurette-divider" id="SolidWorks">
+		<hr class="featurette-divider" id="TAM">
 		<div class="row featurette">
 			<div class="col-md-7 col-md-push-5">
-				<h2 class="featurette-heading">Certified SolidWorks Associate</h2>
+				<h2 class="featurette-heading">Teaching at
+				<a href="http://www.tamuseum.org/" target="_blank" data-toggle="tooltip"
+				title="www.tamuseum.org">Tomorrow's Aeronautical Museum</a></h2>
 				<p class="lead">More info goes here</p>
 			</div>
 			<div class="col-md-5 col-md-pull-7">
-				<img class="featurette-image img-responsive center-block" src="../images/SolidWorks.jpg"
+				<img class="featurette-image img-responsive center-block" src="../images/launch.jpg"
 				alt="SolidWorks Cert">
 			</div>
 		</div>
 		
-		<hr class="featurette-divider" id="Pilot">
+		<hr class="featurette-divider" id="website">
 		<div class="row featurette">
 			<div class="col-md-7">
-				<h2 class="featurette-heading">Private Pilot</h2>
+				<h2 class="featurette-heading">This Website!</h2>
 				<p class="lead">More info goes here</p>
 			</div>
 			<div class="col-md-5">
-				<img class="featurette-image img-responsive center-block" src="../images/License.jpg"
+				<img class="featurette-image img-responsive center-block" src="../images/coding.jpg"
 				alt="Private Pilot's License">
-			</div>
-		</div>
-		
-		<hr class="featurette-divider" id="Skills">
-		<div class="row featurette">
-			<div class="col-md-7 col-md-push-5">
-				<h2 class="featurette-heading">Other Technical Skills</h2>
-				<p class="lead">More info goes here</p>
-			</div>
-			<div class="col-md-5 col-md-pull-7">
-				<img class="featurette-image img-responsive center-block" src="../images/database.jpg"
-				alt="SolidWorks Cert">
 			</div>
 		</div>
 		
 		<hr class="featurette-divider" id="SolidWorks">
 	</div>
 	
+	<!-- Return to Top -->
 	<p class="center"><a href="#top">Return to Top</a></p>
 	<br>
 	
