--- a/files/professional.html
+++ b/files/professional.html
@@ -92,7 +92,7 @@
 						<h3 id="title">Research Associate</h3>
 						<img class="center-block" src="../images/viterbi.png" alt="USC Viterbi School Logo">
 						<h4><a href="http://www.isi.edu/centers/serc/cellularized_spacecraft"
-						target="blank" data-toggle="tooltip" title="www.isi.edu">
+						target="_blank" data-toggle="tooltip" title="www.isi.edu">
 						USC Space Engineering Research Center</a></h4>
 						<h5>February 2016 - May 2016</h5>
 					</div>
@@ -112,7 +112,7 @@
 						<h3 id="title">Intern</h3>
 						<img class="center-block" src="../images/atk.png" alt="ATK Logo">
 						<h4><a href="https://www.orbitalatk.com/defense-systems/armament-systems/"
-						target="blank" data-toggle="tooltip" title="www.orbitalatk.com">ATK Advanced Weapons</a></h4>
+						target="_blank" data-toggle="tooltip" title="www.orbitalatk.com">ATK Advanced Weapons</a></h4>
 						<h5>May 2009 - August 2009</h5>
 					</div>
 					<div class="panel-body">
@@ -132,7 +132,7 @@
 					<div class="panel-heading" id="center">
 						<h3 id="title">Office Manager</h3>
 						<img class="center-block" src="../images/acb.png" alt="USC Viterbi School">
-						<h4><a href="http://www.acbdances.com/" target="blank" data-toggle="tooltip"
+						<h4><a href="http://www.acbdances.com/" target="_blank" data-toggle="tooltip"
 						title="www.acbdances.com">American Contemporary Ballet</a></h4>
 						<h5>June 2014 - July 2015</h5>
 					</div>
