--- a/files/skills.html
+++ b/files/skills.html
@@ -91,7 +91,8 @@
 					<div class="panel panel-default">
 						<div class="panel-heading" id="center">
 							<h3 id="title">Engineer-In-Training</h3>
-							<h4>NCEES</h4>
+							<h4><a href="http://ncees.org/" target="_blank" data-toggle="tooltip"
+							title="www.ncees.org">NCEES</a></h4>
 							<h5>Earned July 2016</h5>
 						</div>
 						<div class="panel-body">
@@ -105,7 +106,8 @@
 					<div class="panel panel-default">
 						<div class="panel-heading" id="center">
 							<h3 id="title">SolidWorks Associate</h3>
-							<h4>Dassault Syst&egrave;mes</h4>
+							<h4><a href="http://www.solidworks.com/" target="_blank" data-toggle="tooltip"
+							title="www.solidworks.com"> Dassault Syst&egrave;mes</a></h4>
 							<h5>Earned October 2010</h5>
 						</div>
 						<div class="panel-body">
@@ -122,7 +124,8 @@
 					<div class="panel panel-default">
 						<div class="panel-heading" id="center">
 							<h3 id="title">High Power Rocketry</h3>
-							<h4>Tripoli Rocketry Association</h4>
+							<h4><a href="http://www.tripoli.org/" target="_blank" data-toggle="tooltip"
+							title="www.tripoli.org">Tripoli Rocketry Association</a></h4>
 							<h5>Earned August 2016</h5>
 						</div>
 						<div class="panel-body" style="padding-bottom: 16.6%;;">
@@ -136,7 +139,8 @@
 					<div class="panel panel-default">
 						<div class="panel-heading" id="center">
 							<h3 id="title">Private Pilot License</h3>
-							<h4>Dept of Transportation</h4>
+							<h4><a href="https://www.faa.gov/" target="_blank" data-toggle="tooltip"
+							title="www.faa.gov">Dept of Transportation</a></h4>
 							<h5>Earned August 2012</h4>
 						</div>
 						<div class="panel-body" style="padding-bottom: 16.8%;">
@@ -162,14 +166,11 @@
 					</div>
 					<div class="panel-body">
 						<ul class="bullets">
-							<li>AME-150: Intro to Computational Methods (MATLAB)</li>
-							<li>AME-201: Statics</li>
-							<li>AME-204: Strength of Materials</li>
-							<li>AME-301: Dynamics</li>
-							<li>AME-308: Computer-Aided Analyses for Aero-Mechanical Design (SolidWorks)</li> 
-							<li>AME-309: Dynamics of Fluids</li>
-							<li>AME-310: Thermodynamics</li>
-							<li>AME-341A&B: Mechoptronics Laboratory</li>
+							<li>Microsoft Office (Excel, Word, PowerPoint)</li>
+							<li>Machine Shop Proficient</li>
+							<li>Technical Report Creation</li>
+							<li>Leadership</li>
+							<li>Public Speaking & Presentations</li> 
 						</ul>
 					</div>
 				</div>
@@ -181,10 +182,27 @@
 					</div>
 					<div class="panel-body">
 						<ul class="bullets">
-							<li>ASTE-280/330: Astronautics & Space Environment I & II</li>
-							<li>ASTE-421: Space Mission Design</li>
-							<li>ASTE-470: Spacecraft Propulsion</li>
-							<li>ASTE-480: Spacecraft Dynamics</li>
+							<li>CAD Design & Analysis
+								<ul>
+									<li>SolidWorks</li>
+									<li>Pro/E</li>
+								</ul>
+							</li>
+							<li>MATLAB</li>
+							<li>LabVIEW</li>
+							<li>Database Systems
+								<ul>
+									<li>MySQL</li>
+									<li>Oracle</li>
+								</ul>
+							</li>
+							<li>Web Development
+								<ul>
+									<li>HTML</li>
+									<li>CSS</li>
+									<li>Bootstrap</li>
+								</ul>
+							</li>
 						</ul>
 					</div>
 				</div>
@@ -196,13 +214,9 @@
 					</div>
 					<div class="panel-body">
 						<ul class="bullets">
-							<li>PHYS-161: Honors Mechanics & Thermodynamics</li>
-							<li>PHYS-162: Honors Electricity & Magnetsim</li>
-							<li>PHYS-163: Honors Optics & Modern Physics</li>
-							<li>MATH-226: Differential Equations</li>
-							<li>BUAD-301: Technical Entrepreneurship </li> 
-							<li>ISE-382: Database Systems: Concepts, Design and Implementation (MySQL & Oracle)</li>
-							<li>ISE-460: Engineering Economy</li>
+							<li>Python</li>
+							<li>QuickBooks</li>
+							<li>Systems Tol Kit (STK)</li>
 						</ul>
 					</div>
 				</div>
