--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	<!-- Main Content -->
 	<div class="container-fluid">
 		<div class="text-box">
-			<h1 style="font-variant: small-caps">Sand Dunes to Moons</h1>
+			<h1 style="font-variant: small-caps; padding-top: 15px;">Sand Dunes to Moons</h1>
 			<br>
 			<p>I'm an engineer afflicted with the belief that the most inspiring
 			feats of humanity STEM from expanding the legacy of the aerospace industry.</p>
