Edited layout of skills page. Added text to the pers_proj page. Created framework for acad_proj page. Changed text size on cover page.

--- a/files/academic_proj.html
+++ b/files/academic_proj.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
-		<title>Keith Yoerg's Personal Projects</title>
+		<title>Keith Yoerg's Academic Projects</title>
 		
 		<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="../css/standard.css">
@@ -49,8 +49,8 @@
 						href="projects.html">Projects
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="academic_proj.html">Academic</a></li>
-							<li class="active"><a href="#">Personal</a></li>
+							<li class="active"><a href="#">Academic</a></li>
+							<li><a href="personal_proj.html">Personal</a></li>
 						</ul>
 					</li>
 					<li><a href="fam_history.html">Family History</a></li>
@@ -67,7 +67,7 @@
 	<!-- Header -->
 	<div class="container-fluid" id="top">
 		<div class="page-header">
-			<h1 style="padding-top: 15px;">Personal Projects</h1>
+			<h1 style="padding-top: 15px;">Academic Projects</h1>
 		</div>
 	</div>
 	
@@ -82,26 +82,26 @@
 		<!-- Carousel Items -->
 		<div class="carousel-inner" role="listbox">
 			<div class="item active">
-				<img class="first-slide" src="../images/charlie.jpg" alt="Rocket Launch Day">
+				<img class="first-slide" src="../images/serc.jpg" alt="Air Bearing Platforms">
 				<div class="container">
 					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="#Tripoli" role="button">Amateur Rocketry</a></p>
+						<p><a class="btn btn-lg btn-info" href="#SERC" role="button">USC SERC</a></p>
 					</div>
 				</div>
 			</div>
 			<div class="item">
-				<img class="second-slide" src="../images/tam.jpg" alt="Keith with kids">
+				<img class="second-slide" src="../images/thermometer.jpg" alt="Thermometer Drawing">
 				<div class="container">
 					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="#TAM" role="button">Volunteering</a></p>
+						<p><a class="btn btn-lg btn-info" href="#design" role="button">Senior Design</a></p>
 					</div>
 				</div>
 			</div>
 			<div class="item">
-				<img class="second-slide" src="../images/cover_page.jpg" alt="Coding for this Page">
+				<img class="second-slide" src="../images/capstone.jpg" alt="Drone & Mothership Plan">
 				<div class="container">
 					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="#website" role="button">This Website</a></p>
+						<p><a class="btn btn-lg btn-info" href="#capstone" role="button">Capstone</a></p>
 					</div>
 				</div>
 			</div>
@@ -119,68 +119,43 @@
 	
 	<!-- "Featurette" Section -->
 	<div class="container marketing">
-		<hr class="featurette-divider" id="Tripoli">
+		<hr class="featurette-divider" id="SERC">
 		<div class="row featurette">
 			<div class="col-md-7">
-				<h2 class="featurette-heading">Amateur Rocketry</h2>
-				<p class="lead">Higher, Faster, Further</p>
-				<p>Building rockets to fly in the California desert is a very fulfilling hobby.
-				Construction allows me to hone my mechanical skills, and I get to be creative when painting.</p>
-				<p>Of course the ultimate payoff is lighting the fire and watching it soar. This video shows my
-				Level 1 Certification launch. I built the rocket from a Madcow Torrent kit and dubbed it "Charlie Horse."
-				It flew on a Cesaroni 225I Motor and reached roughly 3,000 ft altitude.</p>
-				<p>The rocket was recovered without damage and is being prepped for a Level 2 Certification flight
-				early next year, which will include a flight computer and dual chute deployment. I hope to design and
-				build my next high power rocket from scratch.</p>
+				<h2 class="featurette-heading">USC <a href="http://www.isi.edu/centers/serc/cellularized_spacecraft"
+				target="_blank" data-toggle="tooltip" title="www.isi.edu">Space Engineering Research Center</a> (SERC)</h2>
+				<p class="lead">Research Assistant</p>
+				<p>More info here</p>
 			</div>
 			<div class="col-md-5">
-				<div class="embed-responsive embed-responsive-16by9">
-					<video controls allowfullscreen>
-						<source src="../images/Launch.mp4" type="video/mp4" autoplay="0">
-					</video>
-				</div>
+				<img class="featurette-image img-responsive center-block" src="../images/view.jpg"
+				alt="View from SERC Building">
 			</div>
 		</div>
 	
-		<hr class="featurette-divider" id="TAM">
+		<hr class="featurette-divider" id="design">
 		<div class="row featurette">
 			<div class="col-md-7 col-md-push-5">
-				<h2 class="featurette-heading">Volunteering at
-				<a href="http://www.tamuseum.org/" target="_blank" data-toggle="tooltip"
-				title="www.tamuseum.org">Tomorrow's Aeronautical Museum</a></h2>
-				<p class="lead">Rocketry Program Coordinator</p>
-				<p>I go to the Compton airport at least once a week to teach kids ages 8 - 16 about the basics 
-				of rocketry and space travel. Topics range from Newton's Laws to the makeup of our Solar System 
-				and any other technical topic the students have questions about.</p>
-				<p>The lectures and discussions are balanced out with hands-on demonstrations of the principals covered.
-				These demos include alka-seltzer "rockets", building and flying Estes model rockets, and use of the
-				<a href="https://kerbalspaceprogram.com/en/" target="_blank" data-toggle="tooltip" title="kerbalspaceprogram.com">
-				Kerbal Space Program</a> video game to inspire the kids and make the topics more accessable.</p>
+				<h2 class="featurette-heading">Automating the LA Coliseum Thermometer</h2>
+				<p class="lead">Team Member</p>
+				<p>More info here</p>
 			</div>
 			<div class="col-md-5 col-md-pull-7">
-				<img class="featurette-image img-responsive center-block" src="../images/launch.jpg"
-				alt="SolidWorks Cert">
+				<img class="featurette-image img-responsive center-block" src="../images/coliseum.jpg"
+				alt="LA Coliseum Thermometer">
 			</div>
 		</div>
 		
-		<hr class="featurette-divider" id="website">
+		<hr class="featurette-divider" id="capstone">
 		<div class="row featurette">
 			<div class="col-md-7">
-				<h2 class="featurette-heading">This Website!</h2>
-				<p class="lead">HTML, CSS, & Bootstrap Coding</p>
-				<p>This website was built to serve 2 purposes:
-				<ul>
-					<li>Showcase my achievements and interests to friends and potential employers.</li>
-					<li>Build my skills as a web developer.</li>
-				</ul></p>
-				<p>Before this project I had very minimal experience with HTML, and absolutely no familiarity 
-				with Bootstrap. Each page I created had a new problem to tackle, and in turn equipped me with 
-				new skills. I'm pleased with this end result and excited to update the capabilities as I continue
-				to learn more web development.</p>
+				<h2 class="featurette-heading">Garbage Alleviation through Individual Assignments</h2>
+				<p class="lead">Launch & Capture Coordinator</p>
+				<p>More info here</p>
 			</div>
 			<div class="col-md-5">
-				<img class="featurette-image img-responsive center-block" src="../images/coding.jpg"
-				alt="Private Pilot's License">
+				<img class="featurette-image img-responsive center-block" src="../images/gaia.jpg"
+				alt="GAIA Mission Patch">
 			</div>
 		</div>
 		
