--- a/files/skills.html
+++ b/files/skills.html
@@ -85,7 +85,7 @@
 	<div class="container-fluid" id="certs">
 		<h1 class="center">Certifications</h1>
 		<div class="row">
-			<div class="col-sm-6">
+			<div class="col-sm-12">
 				<h2 class="center">Professional</h2>
 				<div class="col-md-6">
 					<div class="panel panel-default">
@@ -117,8 +117,9 @@
 					</div>
 				</div>
 			</div>
-
-			<div class="col-sm-6">
+		</div>
+		<div class="row">
+			<div class="col-sm-12">
 				<h2 class="center">Recreational</h2>
 				<div class="col-md-6">
 					<div class="panel panel-default">
@@ -134,7 +135,7 @@
 						</div>
 					</div>
 				</div>
-				
+
 				<div class="col-md-6">
 					<div class="panel panel-default">
 						<div class="panel-heading" id="center">
