--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
 	<div class="container-fluid">
 		<div class="text-box">
 			<h1 style="font-variant: small-caps; padding-top: 15px;">Sand Dunes to Moons</h1>
-			<br>
-			<p>I'm an engineer afflicted with the belief that the most inspiring
-			feats of humanity STEM from expanding the legacy of the aerospace industry.</p>
+			<h3>I'm an engineer afflicted with the belief that the most inspiring
+			feats of humanity STEM from expanding the legacy of the aerospace industry.</h3>
 			<br>
 			<p>Explore this site to learn more about my interests and talents, and feel free to
 			<a href="files/contact.html">contact me</a>.</p>
