Added text & info to acad_proj page.

--- a/files/academic_proj.html
+++ b/files/academic_proj.html
@@ -82,7 +82,7 @@
 		<!-- Carousel Items -->
 		<div class="carousel-inner" role="listbox">
 			<div class="item active">
-				<img class="first-slide" src="../images/serc.jpg" alt="Air Bearing Platforms">
+				<img class="first-slide" src="../images/view.jpg" alt="Air Bearing Platforms">
 				<div class="container">
 					<div class="carousel-caption">
 						<p><a class="btn btn-lg btn-info" href="#SERC" role="button">USC SERC</a></p>
@@ -90,7 +90,7 @@
 				</div>
 			</div>
 			<div class="item">
-				<img class="second-slide" src="../images/thermometer.jpg" alt="Thermometer Drawing">
+				<img class="second-slide" src="../images/coliseum.jpg" alt="Thermometer Drawing">
 				<div class="container">
 					<div class="carousel-caption">
 						<p><a class="btn btn-lg btn-info" href="#design" role="button">Senior Design</a></p>
@@ -98,7 +98,7 @@
 				</div>
 			</div>
 			<div class="item">
-				<img class="second-slide" src="../images/capstone.jpg" alt="Drone & Mothership Plan">
+				<img class="second-slide" src="../images/gaia.jpg" alt="Drone & Mothership Plan">
 				<div class="container">
 					<div class="carousel-caption">
 						<p><a class="btn btn-lg btn-info" href="#capstone" role="button">Capstone</a></p>
@@ -125,10 +125,22 @@
 				<h2 class="featurette-heading">USC <a href="http://www.isi.edu/centers/serc/cellularized_spacecraft"
 				target="_blank" data-toggle="tooltip" title="www.isi.edu">Space Engineering Research Center</a> (SERC)</h2>
 				<p class="lead">Research Assistant</p>
-				<p>More info here</p>
+				<p>The research conducted by Dr. David Barnhart at SERC is focused on improving spaceflight technology 
+				to aid the advancement of the industry. The labpsace is conveniently located in Marina del Rey, which 
+				allows for direct collaboration with many of the industry companies in the Southern California area.</p>
+				<p>I worked on 2 projects while assisting at SERC:
+				<ul>
+					<li>Repairing bell-jar vacuum tables to a 10<sup>-5</sup> Torr capability
+					for CubeSat testing.</li>
+					<li>Designing and assembling air bearing free flight platforms to
+					serve as a testbed for cellularized spacecraft research.</li>
+				</ul></p>
+				<p>The majortiy of my work was with the latter project, where I worked on the mechanical design and integration
+				of parts for the system. Our multidisciplinary team built the platforms from scratch, and had completed an 
+				operational prototype by the time I left.</p>
 			</div>
 			<div class="col-md-5">
-				<img class="featurette-image img-responsive center-block" src="../images/view.jpg"
+				<img class="featurette-image img-responsive center-block" src="../images/serc.jpg"
 				alt="View from SERC Building">
 			</div>
 		</div>
@@ -137,11 +149,21 @@
 		<div class="row featurette">
 			<div class="col-md-7 col-md-push-5">
 				<h2 class="featurette-heading">Automating the LA Coliseum Thermometer</h2>
-				<p class="lead">Team Member</p>
-				<p>More info here</p>
+				<p class="lead">Senior Design Project</p>
+				<p>The objective of the project was to install an improved system to control the thermometer at the 
+				Los Angeles Memorial Colisem. As a national historical landmark, the system could not include any 
+				changes to the structure of the stadium. The thermometer was originally designed to be controlled by 
+				hand, and our team devised an analog control system to automate the process.</p>
+				<p>Our system utilized a type J thermocouple to produce a voltage which was then fed through a circuit.
+				The circuit included a potentiometer to record the current position of the needle, and op-amps to compare
+				the voltages from the thermocouple and potentiometer. When there was a large enough difference in the
+				voltages current was sent to the motor which turned the needle in the proper direction.</p>
+				<p>The motor was connected to the needle with a machined adapter and set screws to, avoiding any alterations
+				to the structure of the building. The final project was attached to a mock-up of the Coliseum thermometer
+				and was accurate wo within &plusmn; 3&deg;F.</p>
 			</div>
 			<div class="col-md-5 col-md-pull-7">
-				<img class="featurette-image img-responsive center-block" src="../images/coliseum.jpg"
+				<img class="featurette-image img-responsive center-block" src="../images/thermometer.jpg"
 				alt="LA Coliseum Thermometer">
 			</div>
 		</div>
@@ -151,10 +173,21 @@
 			<div class="col-md-7">
 				<h2 class="featurette-heading">Garbage Alleviation through Individual Assignments</h2>
 				<p class="lead">Launch & Capture Coordinator</p>
-				<p>More info here</p>
+				<p>This project was to plan all aspects of a space mission to remove 10 or more pieces of orbital debris 
+				from graveyard orbits for under $400 million. My responsiblities included designing the capture method, payload 
+				layout, launch vehicle, and launch profile for the mission. Our final design incorporated a mothership design
+				with 12 drones used to de-orbit the debris, which is simulated in the diagram.</p>
+				<p>The system was to be launched on a Falcon 9 rocket from Vandenberg to limit the cost of transferring to a high 
+				inclination orbit. Using a high-inclination orbit and nodal regression for the mothership, full coverage of the 
+				Earth and its orbital debris was possible.</p>
+				<p>While many capture methods were researched, a soft kevlar net deployed via telescoping poles 
+				allowed for the strongest connection to debris of various sizes while still limiting weight of the drone. 
+				Once captured, the debris and drone would de-orbit using a combination of fuel and an electrodynamic tether 
+				to increase drag and pull it into the atmosphere to burn up. The final design of the mission had an 
+				estimated cost of $150 million, well below the $400 million max cost.</p>
 			</div>
 			<div class="col-md-5">
-				<img class="featurette-image img-responsive center-block" src="../images/gaia.jpg"
+				<img class="featurette-image img-responsive center-block" src="../images/capstone.jpg"
 				alt="GAIA Mission Patch">
 			</div>
 		</div>
