Created hobbies page, looked for TMB pictures.

--- a/files/academic_proj.html
+++ b/files/academic_proj.html
@@ -82,7 +82,7 @@
 		<!-- Carousel Items -->
 		<div class="carousel-inner" role="listbox">
 			<div class="item active">
-				<img class="first-slide" src="../images/view.jpg" alt="Air Bearing Platforms">
+				<img class="first-slide" src="../images/view.jpg" alt="View from SERC building">
 				<div class="container">
 					<div class="carousel-caption">
 						<p><a class="btn btn-lg btn-info" href="#SERC" role="button">USC SERC</a></p>
@@ -90,7 +90,7 @@
 				</div>
 			</div>
 			<div class="item">
-				<img class="second-slide" src="../images/coliseum.jpg" alt="Thermometer Drawing">
+				<img class="second-slide" src="../images/coliseum.jpg" alt="Coliseum Thermometer">
 				<div class="container">
 					<div class="carousel-caption">
 						<p><a class="btn btn-lg btn-info" href="#design" role="button">Senior Design</a></p>
@@ -98,7 +98,7 @@
 				</div>
 			</div>
 			<div class="item">
-				<img class="second-slide" src="../images/gaia.jpg" alt="Drone & Mothership Plan">
+				<img class="third-slide" src="../images/gaia.jpg" alt="GAIA Mission Patch">
 				<div class="container">
 					<div class="carousel-caption">
 						<p><a class="btn btn-lg btn-info" href="#capstone" role="button">Capstone</a></p>
@@ -141,7 +141,7 @@
 			</div>
 			<div class="col-md-5">
 				<img class="featurette-image img-responsive center-block" src="../images/serc.jpg"
-				alt="View from SERC Building">
+				alt="Air Bearing Platform">
 			</div>
 		</div>
 	
@@ -151,7 +151,7 @@
 				<h2 class="featurette-heading">Automating the LA Coliseum Thermometer</h2>
 				<p class="lead">Senior Design Project</p>
 				<p>The objective of the project was to install an improved system to control the thermometer at the 
-				Los Angeles Memorial Colisem. As a national historical landmark, the system could not include any 
+				Los Angeles Memorial Coliseum. As a national historical landmark, the system could not include any 
 				changes to the structure of the stadium. The thermometer was originally designed to be controlled by 
 				hand, and our team devised an analog control system to automate the process.</p>
 				<p>Our system utilized a type J thermocouple to produce a voltage which was then fed through a circuit.
@@ -164,7 +164,7 @@
 			</div>
 			<div class="col-md-5 col-md-pull-7">
 				<img class="featurette-image img-responsive center-block" src="../images/thermometer.jpg"
-				alt="LA Coliseum Thermometer">
+				alt="Thermometer Drawing">
 			</div>
 		</div>
 		
@@ -188,11 +188,11 @@
 			</div>
 			<div class="col-md-5">
 				<img class="featurette-image img-responsive center-block" src="../images/capstone.jpg"
-				alt="GAIA Mission Patch">
+				alt="Drone & Mothership Plan">
 			</div>
 		</div>
 		
-		<hr class="featurette-divider" id="SolidWorks">
+		<hr class="featurette-divider">
 	</div>
 	
 	<!-- Return to Top -->
