--- a/files/hobbies.html
+++ b/files/hobbies.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
-		<title>Keith Yoerg's Personal Projects</title>
+		<title>Keith Yoerg's Hobbies</title>
 		
 		<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="../css/standard.css">
@@ -50,11 +50,11 @@
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a href="academic_proj.html">Academic</a></li>
-							<li class="active"><a href="#">Personal</a></li>
+							<li><a href="personal_proj.html">Personal</a></li>
 						</ul>
 					</li>
 					<li><a href="fam_history.html">Family History</a></li>
-					<li><a href="hobbies.html">Other Interests</a></li>
+					<li class="active"><a href="#">Other Interests</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="contact.html"><span class="glyphicon glyphicon-envelope"></span>
@@ -67,7 +67,7 @@
 	<!-- Header -->
 	<div class="container-fluid" id="top">
 		<div class="page-header">
-			<h1 style="padding-top: 15px;">Personal Projects</h1>
+			<h1 style="padding-top: 15px;">Other Interests/Hobbies</h1>
 		</div>
 	</div>
 	
@@ -78,30 +78,39 @@
 			<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
 			<li data-target="#myCarousel" data-slide-to="2"></li>
 			<li data-target="#myCarousel" data-slide-to="3"></li>
+			<li data-target="#myCarousel" data-slide-to="4"></li>
 		</ol>
 		<!-- Carousel Items -->
 		<div class="carousel-inner" role="listbox">
 			<div class="item active">
-				<img class="first-slide" src="../images/charlie.jpg" alt="Rocket Launch Day">
+				<img class="first-slide" src="../images/view.jpg" alt="Keith as USC Drum Major">
 				<div class="container">
 					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="#Tripoli" role="button">Amateur Rocketry</a></p>
+						<p><a class="btn btn-lg btn-info" href="#TMB" role="button">Trojan Marching Band</a></p>
 					</div>
 				</div>
 			</div>
 			<div class="item">
-				<img class="second-slide" src="../images/tam.jpg" alt="Keith with kids">
+				<img class="second-slide" src="../images/coliseum.jpg" alt="Keith's Garden">
 				<div class="container">
 					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="#TAM" role="button">Volunteering</a></p>
+						<p><a class="btn btn-lg btn-info" href="#garden" role="button">Gardening</a></p>
 					</div>
 				</div>
 			</div>
 			<div class="item">
-				<img class="third-slide" src="../images/cover_page.jpg" alt="Coding for this Page">
+				<img class="third-slide" src="../images/gaia.jpg" alt="Brewing Beer">
 				<div class="container">
 					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="#website" role="button">This Website</a></p>
+						<p><a class="btn btn-lg btn-info" href="#beer" role="button">Brewing Beer</a></p>
+					</div>
+				</div>
+			</div>
+			<div class="item">
+				<img class="fourth-slide" src="../images/gaia.jpg" alt="10k Run">
+				<div class="container">
+					<div class="carousel-caption">
+						<p><a class="btn btn-lg btn-info" href="#exercise" role="button">Exercise</a></p>
 					</div>
 				</div>
 			</div>
@@ -119,68 +128,55 @@
 	
 	<!-- "Featurette" Section -->
 	<div class="container marketing">
-		<hr class="featurette-divider" id="Tripoli">
+		<hr class="featurette-divider" id="TMB">
 		<div class="row featurette">
 			<div class="col-md-7">
-				<h2 class="featurette-heading">Amateur Rocketry</h2>
-				<p class="lead">Higher, Faster, Further</p>
-				<p>Building rockets to fly in the California desert is a very fulfilling hobby.
-				Construction allows me to hone my mechanical skills, and I get to be creative when painting.</p>
-				<p>Of course the ultimate payoff is lighting the fire and watching it soar. This video shows my
-				Level 1 Certification launch. I built the rocket from a Madcow Torrent kit and dubbed it "Charlie Horse."
-				It flew on a Cesaroni 225I Motor and reached roughly 3,000 ft altitude.</p>
-				<p>The rocket was recovered without damage and is being prepped for a Level 2 Certification flight
-				early next year, which will include a flight computer and dual chute deployment. I hope to design and
-				build my next high power rocket from scratch.</p>
+				<h2 class="featurette-heading">USC Trojan Marching Band</h2>
+				<p class="lead">Drum Major & Trumpet TA</p>
+				<p>More info here</p>
 			</div>
 			<div class="col-md-5">
-				<div class="embed-responsive embed-responsive-16by9">
-					<video controls allowfullscreen>
-						<source src="../images/Launch.mp4" type="video/mp4" autoplay="0">
-					</video>
-				</div>
+				<img class="featurette-image img-responsive center-block" src="../images/serc.jpg"
+				alt="View from SERC Building">
 			</div>
 		</div>
 	
-		<hr class="featurette-divider" id="TAM">
+		<hr class="featurette-divider" id="garden">
 		<div class="row featurette">
 			<div class="col-md-7 col-md-push-5">
-				<h2 class="featurette-heading">Volunteering at
-				<a href="http://www.tamuseum.org/" target="_blank" data-toggle="tooltip"
-				title="www.tamuseum.org">Tomorrow's Aeronautical Museum</a></h2>
-				<p class="lead">Rocketry Program Coordinator</p>
-				<p>I go to the Compton airport at least once a week to teach kids ages 8 - 16 about the basics 
-				of rocketry and space travel. Topics range from Newton's Laws to the makeup of our Solar System 
-				and any other technical topic the students have questions about.</p>
-				<p>The lectures and discussions are balanced out with hands-on demonstrations of the principals covered.
-				These demos include alka-seltzer "rockets", building and flying Estes model rockets, and use of the
-				<a href="https://kerbalspaceprogram.com/en/" target="_blank" data-toggle="tooltip" title="kerbalspaceprogram.com">
-				Kerbal Space Program</a> video game to inspire the kids and make the topics more accessable.</p>
+				<h2 class="featurette-heading">Home Gardening</h2>
+				<p class="lead">Grow LA Victory Gardener</p>
+				<p>More info here</p>
 			</div>
 			<div class="col-md-5 col-md-pull-7">
-				<img class="featurette-image img-responsive center-block" src="../images/launch.jpg"
-				alt="SolidWorks Cert">
+				<img class="featurette-image img-responsive center-block" src="../images/thermometer.jpg"
+				alt="LA Coliseum Thermometer">
 			</div>
 		</div>
 		
-		<hr class="featurette-divider" id="website">
+		<hr class="featurette-divider" id="beer">
 		<div class="row featurette">
 			<div class="col-md-7">
-				<h2 class="featurette-heading">This Website!</h2>
-				<p class="lead">HTML, CSS, & Bootstrap Coding</p>
-				<p>This website was built to serve 2 purposes:
-				<ul>
-					<li>Showcase my achievements and interests to friends and potential employers.</li>
-					<li>Build my skills as a web developer.</li>
-				</ul></p>
-				<p>Before this project I had very minimal experience with HTML, and absolutely no familiarity 
-				with Bootstrap. Each page I created had a new problem to tackle, and in turn equipped me with 
-				new skills. I'm pleased with this end result and excited to update the capabilities as I continue
-				to learn more web development.</p>
+				<h2 class="featurette-heading">Brewing Beer</h2>
+				<p class="lead">Homebrew Enthusiast</p>
+				<p>More info here</p>
 			</div>
 			<div class="col-md-5">
-				<img class="featurette-image img-responsive center-block" src="../images/coding.jpg"
-				alt="Private Pilot's License">
+				<img class="featurette-image img-responsive center-block" src="../images/capstone.jpg"
+				alt="GAIA Mission Patch">
+			</div>
+		</div>
+
+		<hr class="featurette-divider" id="exercise">
+		<div class="row featurette">
+			<div class="col-md-7 col-md-push-5">
+				<h2 class="featurette-heading">Athletics</h2>
+				<p class="lead">Swim, Bike, Run</p>
+				<p>More info here</p>
+			</div>
+			<div class="col-md-5 col-md-pull-7">
+				<img class="featurette-image img-responsive center-block" src="../images/thermometer.jpg"
+				alt="LA Coliseum Thermometer">
 			</div>
 		</div>
 		
