Added photos & info to hobbies page. Created fam_history page and began adding content.

--- a/files/hobbies.html
+++ b/files/hobbies.html
@@ -83,15 +83,15 @@
 		<!-- Carousel Items -->
 		<div class="carousel-inner" role="listbox">
 			<div class="item active">
-				<img class="first-slide" src="../images/view.jpg" alt="Keith as USC Drum Major">
+				<img class="first-slide" src="../images/colorado.jpg" alt="Keith as USC Drum Major">
 				<div class="container">
 					<div class="carousel-caption">
-						<p><a class="btn btn-lg btn-info" href="#TMB" role="button">Trojan Marching Band</a></p>
+						<p><a class="btn btn-lg btn-info" href="#TMB" role="button">Marching Band</a></p>
 					</div>
 				</div>
 			</div>
 			<div class="item">
-				<img class="second-slide" src="../images/coliseum.jpg" alt="Keith's Garden">
+				<img class="second-slide" src="../images/garden.jpg" alt="Keith's Garden">
 				<div class="container">
 					<div class="carousel-caption">
 						<p><a class="btn btn-lg btn-info" href="#garden" role="button">Gardening</a></p>
@@ -99,7 +99,7 @@
 				</div>
 			</div>
 			<div class="item">
-				<img class="third-slide" src="../images/gaia.jpg" alt="Brewing Beer">
+				<img class="third-slide" src="../images/yoerg_beer.jpg" alt="Yoerg's Beer Logo">
 				<div class="container">
 					<div class="carousel-caption">
 						<p><a class="btn btn-lg btn-info" href="#beer" role="button">Brewing Beer</a></p>
@@ -107,7 +107,7 @@
 				</div>
 			</div>
 			<div class="item">
-				<img class="fourth-slide" src="../images/gaia.jpg" alt="10k Run">
+				<img class="fourth-slide" src="../images/exercise.jpg" alt="10k Run">
 				<div class="container">
 					<div class="carousel-caption">
 						<p><a class="btn btn-lg btn-info" href="#exercise" role="button">Exercise</a></p>
@@ -133,11 +133,24 @@
 			<div class="col-md-7">
 				<h2 class="featurette-heading">USC Trojan Marching Band</h2>
 				<p class="lead">Drum Major & Trumpet TA</p>
-				<p>More info here</p>
+				<p>I began playing the trumpet at 10 years old, and continued to play through college and after. 
+				While a student at the University of Southern California, I joined the <a href="http://www.usc.edu/dept/band/"
+				target="_blank" data-toggle="tooltip" title="www.usc.edu/dept/band">Trojan Marching Band</a>, and remained a 
+				member of the band for 7 years.</p>
+				<p>I held many leadership positions while in band, including having the honor of leading the 300+ person 
+				orginization as the Drum Major. The Drum Major is the most visible student leader on campus, tasked with 
+				carrying the sword at football games and stabbing the field before directing the band's pregame performance.</p>
+				<p>TMB Leadership Timeline (fall seasons):
+					<ul>
+						<li>2011: Trumpet Section Leader</li>
+						<li>2012: Drum Major</li>
+						<li>'13-'14: Trumpet Teaching Assistant</li>
+					<ul>
+				
 			</div>
 			<div class="col-md-5">
-				<img class="featurette-image img-responsive center-block" src="../images/serc.jpg"
-				alt="View from SERC Building">
+				<img class="featurette-image img-responsive center-block" src="../images/trumpets.jpg"
+				alt="USC Trumpet class of 2012 in Colorado">
 			</div>
 		</div>
 	
@@ -146,11 +159,16 @@
 			<div class="col-md-7 col-md-push-5">
 				<h2 class="featurette-heading">Home Gardening</h2>
 				<p class="lead">Grow LA Victory Gardener</p>
-				<p>More info here</p>
+				<p>In the spring of 2015 a single mint plant affectionately named "Marty" laid the groundwork for a passion that 
+				is continuing to grow. I have been consistently growing vegitables and herbs on my balcony ever since, and 
+				have even helped many friends start their own gardens as well.</p>
+				<p>Recently I completed a gardening class taught by certified Master Gardeners, and I continue to do personal 
+				research to increase the yield from my crops. I'm excited to one day own a home with a yard so I can plant crops 
+				that require more space than a balcony container offers.</p>
 			</div>
 			<div class="col-md-5 col-md-pull-7">
-				<img class="featurette-image img-responsive center-block" src="../images/thermometer.jpg"
-				alt="LA Coliseum Thermometer">
+				<img class="featurette-image img-responsive center-block" src="../images/garden_cert.jpg"
+				alt="Victory Garden Certificate">
 			</div>
 		</div>
 		
@@ -159,11 +177,17 @@
 			<div class="col-md-7">
 				<h2 class="featurette-heading">Brewing Beer</h2>
 				<p class="lead">Homebrew Enthusiast</p>
-				<p>More info here</p>
+				<p>Beer has been brewed in my family for generations. As a direct descendant of the man that opened the first 
+				brewery in Minnesota, Yoerg's Beer, I have always felt that brewing beer was a great hobby to keep me connected 
+				to my roots.</p>
+				<p>Brewing beer at home is a very engineering-centric endeavour as well. While fermenting the beer must 
+				remain at a constant temperature to avoid producing off-flavors, and after brewing it must be cooled quickly 
+				for the same reason. These challenges necessitate creative solutions and I enjoy the hands-on task of building 
+				those solutions. I hope to build a keg refrigerator soon to further improve the quality of my beer.</p>
 			</div>
 			<div class="col-md-5">
-				<img class="featurette-image img-responsive center-block" src="../images/capstone.jpg"
-				alt="GAIA Mission Patch">
+				<img class="featurette-image img-responsive center-block" src="../images/beer_brew.jpg"
+				alt="Keith Brewing Beer at Home">
 			</div>
 		</div>
 
@@ -172,11 +196,16 @@
 			<div class="col-md-7 col-md-push-5">
 				<h2 class="featurette-heading">Athletics</h2>
 				<p class="lead">Swim, Bike, Run</p>
-				<p>More info here</p>
+				<p>I have been involved with sports my entire life. I began competitively swimming as a 6 year old, and continued 
+				swimming in meets until I was 19. I still swim recreationally and enjoy hiking and pick-up 
+				football games with friends to keep in shape.</p>
+				<p>In official races I have competed as a runner and as a triathlete. My longest triathlon was a half-Ironman 
+				distance which consists of a 1.2-mile swim, a 56-mile bike, and a 13.1-mile run. It's on my bucket list to one 
+				day complete a full Ironman race, and I am working (slowly) to get into shape for that.</p>
 			</div>
 			<div class="col-md-5 col-md-pull-7">
-				<img class="featurette-image img-responsive center-block" src="../images/thermometer.jpg"
-				alt="LA Coliseum Thermometer">
+				<img class="featurette-image img-responsive center-block" src="../images/triathlon.jpg"
+				alt="Keith Biking in the Door County triathlon">
 			</div>
 		</div>
 		
