Fixes to picture file names for proper display.

--- a/files/academic_proj.html
+++ b/files/academic_proj.html
@@ -90,7 +90,7 @@
 				</div>
 			</div>
 			<div class="item">
-				<img class="second-slide" src="../images/coliseum.jpg" alt="Coliseum Thermometer">
+				<img class="second-slide" src="../images/coliseum.JPG" alt="Coliseum Thermometer">
 				<div class="container">
 					<div class="carousel-caption">
 						<p><a class="btn btn-lg btn-info" href="#design" role="button">Senior Design</a></p>
@@ -163,7 +163,7 @@
 				and was accurate wo within &plusmn; 3&deg;F.</p>
 			</div>
 			<div class="col-md-5 col-md-pull-7">
-				<img class="featurette-image img-responsive center-block" src="../images/thermometer.jpg"
+				<img class="featurette-image img-responsive center-block" src="../images/Thermometer.jpg"
 				alt="Thermometer Drawing">
 			</div>
 		</div>
