--- a/files/personal_proj.html
+++ b/files/personal_proj.html
@@ -82,7 +82,7 @@
 		<!-- Carousel Items -->
 		<div class="carousel-inner" role="listbox">
 			<div class="item active">
-				<img class="first-slide" src="../images/charlie.jpg" alt="Rocket Launch Day">
+				<img class="first-slide" src="../images/charlie.JPG" alt="Rocket Launch Day">
 				<div class="container">
 					<div class="carousel-caption">
 						<p><a class="btn btn-lg btn-info" href="#Tripoli" role="button">Amateur Rocketry</a></p>
@@ -98,7 +98,7 @@
 				</div>
 			</div>
 			<div class="item">
-				<img class="third-slide" src="../images/cover_page.jpg" alt="Coding for this Page">
+				<img class="third-slide" src="../images/cover_page.JPG" alt="Cover Page of this site">
 				<div class="container">
 					<div class="carousel-caption">
 						<p><a class="btn btn-lg btn-info" href="#website" role="button">This Website</a></p>
@@ -159,7 +159,7 @@
 			</div>
 			<div class="col-md-5 col-md-pull-7">
 				<img class="featurette-image img-responsive center-block" src="../images/launch.jpg"
-				alt="SolidWorks Cert">
+				alt="Launch of Estes rocket with TAM students">
 			</div>
 		</div>
 		
@@ -179,8 +179,8 @@
 				to learn more web development.</p>
 			</div>
 			<div class="col-md-5">
-				<img class="featurette-image img-responsive center-block" src="../images/coding.jpg"
-				alt="Private Pilot's License">
+				<img class="featurette-image img-responsive center-block" src="../images/coding.JPG"
+				alt="Coding for this site">
 			</div>
 		</div>
 		
