--- a/files/skills.html
+++ b/files/skills.html
@@ -111,7 +111,7 @@
 							<h5>Earned October 2010</h5>
 						</div>
 						<div class="panel-body">
-							<img class="center-block" src="../images/SolidWorks.jpg"
+							<img class="center-block" src="../images/SolidWorks.JPG"
 							alt="SolidWorks Cert" id="fit">
 						</div>
 					</div>
